Awards Tooltip fix fail
tried to fix tooltips not showing on my awards, however I was unsuccessful. Need to fix next time.

--- a/scss/partials/_hovers.scss
+++ b/scss/partials/_hovers.scss
@@ -155,14 +155,15 @@
 // NEWS
 
 
-#blackSwanInfo:hover, #craneInfo:hover, #girlGuidingrInfo:hover {
-    .accreditationsDetails {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-}
+// #blackSwanInfo:hover, #craneInfo:hover, #girlGuidingrInfo:hover {
+//     position: relative;
+//     .accreditationsDetails {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//     }
+// }
 
 // SOCIALS 
 
