--- a/scss/partials/layout/_news.scss
+++ b/scss/partials/layout/_news.scss
@@ -202,33 +202,39 @@
 
 #newsAccreditations {
     margin-bottom: 30px;
+    position: relative;
 }
 
 .accreditationsContainer {
-    position: relative;
     display: inline-block;
+    position: relative;
 }
 
 .accreditationsDetails {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     width: 280px;
-    // height: 244.8px;
+    height: 244.8px;
     min-height: 244.8px;
     max-height: 260px;
     background-color: #333645;
     padding: 20px;
     color: white;
-    bottom: 155%;
+    bottom: 110%;
     left: 50%; 
     transform: translateX(-50%);
     text-align: center;
+    z-index: 100;
 }
 
 .accreditationsDetails::after {
     content: "";
       position: absolute;
-      bottom: -35px;
+      bottom: -10px;
+      left: 50%;
       z-index: 90;
       width: 0;
       height: 0;
